Fixed a few mistakes (Jack told me how to do this)

--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
           <div class="mb-3">
             <label for="phone" class="form-label">Phone</label>
             <input type="text" class="form-control" id="phone">
-            <p class="error" id="phoneError">You must enter phone numer!</p>
+            <p class="error" id="phoneError"></p>
           </div>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -59,12 +59,12 @@
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" id="password1">
-            <p class="error" id="passError">You must provide a password!</p>
+            <p class="error" id="passError"></p>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" id="password2">
-            <p class="error" id="matchError">Passwords do not match!</p>
+            <p class="error" id="matchError"></p>
           </div>
           <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -78,6 +78,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="scripts/scripts.js"></script>
     <script src="scripts/checkUser.js"></script>
-    <script src="scripts/userJS.js"></script>
+    <script src="scripts/userRegister.js"></script>
 </body>
 </html>
